# learnOpenGL_practice

./: CMakeLists.txt
include/: stb_image.h
include/glad/: glad.h
res/shaders/: 04.fs  04.vs  04prac.fs  04prac.vs  basic.shader
src/: CMakeLists.txt  glad.c
src/01.startOpengl/: CMakeLists.txt
src/02.paintTriangle/: CMakeLists.txt  main.cpp
src/03.useEBO/: CMakeLists.txt
src/04.shader/: CMakeLists.txt  main.cpp
src/05.texture/: CMakeLists.txt  main.cpp
